welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: value =< is not a member of Int
  (n>=90 & n=<110) & (n>=190 & n=<210) 
            ^nearHundred:2: error: value =< is not a member of Int
  (n>=90 & n=<110) & (n>=190 & n=<210) 
                                ^